fix: adjust z-index to fix background layering issue

--- a/front-end/src/app/pages/about/about.component.scss
+++ b/front-end/src/app/pages/about/about.component.scss
@@ -1,12 +1,8 @@
-main {
-  background: var(--bg-main);
-  min-height: 100dvh;
-}
-
 .about-section {
   min-height: 100vh;
   padding: 80px 24px;
   color: var(--text-main);
+  background: var(--bg-main);
 }
 
 .about-main-title {
