--- a/front-end/src/app/pages/contact/contact.component.scss
+++ b/front-end/src/app/pages/contact/contact.component.scss
@@ -1,7 +1,3 @@
-main {
-  background: var(--bg-main);
-}
-
 .contact-section{
   padding: 100px 20px;
   background: var(--bg-main);
