--- a/front-end/src/app/pages/home/home.component.scss
+++ b/front-end/src/app/pages/home/home.component.scss
@@ -8,11 +8,12 @@
 .particles-container {
   position: fixed;
   inset: 0;
-  z-index: -1;
+  z-index: 0;
   background-color: var(--bg-main);
 }
 
 .content-main {
+  z-index: 1;
   flex: 1 1 auto;
   min-height: 0;
 
@@ -54,7 +55,8 @@
 
 .content-footer {
   padding: 0 20px 20px;
-
+  z-index: 1;
+  
   display: flex;
   flex-direction: column;
   align-items: center;
