--- a/front-end/src/app/pages/project/project.component.scss
+++ b/front-end/src/app/pages/project/project.component.scss
@@ -1,8 +1,3 @@
-main {
-  background: var(--bg-main);
-  min-height: 100dvh;
-}
-
 .projects-section{
   padding: 100px 20px;
   background: var(--bg-main);
